<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.riluq.githubuserapp.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_detail_motion"
        tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="16dp"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_user"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/img_back"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/img_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_border"
                        android:layout_alignParentEnd="true"
                        android:padding="16dp" />
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_photo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageUrl="@{viewModel.photo}" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="@id/mcv_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mcv_photo"
            app:layout_constraintTop_toTopOf="@id/mcv_photo"
            app:textString="@{viewModel.name}"
            tools:text="Sidiq Permana" />

        <TableLayout
            android:id="@+id/tl_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/mcv_photo"
            app:layout_constraintTop_toBottomOf="@id/mcv_photo">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="0dp"
                    android:text="@string/username"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp"
                    app:textString="@{viewModel.username}"
                    tools:text="sidiqpermana" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="0dp"
                    android:text="@string/email"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp"
                    app:textString="@{viewModel.email}"
                    tools:text="sidiq@gmail.com" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="0dp"
                    android:text="@string/company"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp"
                    app:textString="@{viewModel.company}"
                    tools:text="Nusantara Beta Studio" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:minWidth="0dp"
                    android:text="@string/location"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:paddingStart="24dp"
                    android:paddingEnd="0dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="12sp"
                    app:textString="@{viewModel.location}"
                    tools:text="Jakarta Indonesia" />
            </TableRow>

        </TableLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_summary"
            app:tabIndicatorColor="@color/primaryColor"
            app:tabSelectedTextColor="@color/primaryColor"
            app:tabTextColor="#2E2E2E" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs_detail" />

        <FrameLayout
            android:id="@+id/fm_loading_refresh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:alpha="0.4"
            android:background="@android:color/black">

            <ImageView
                android:id="@+id/img_loading"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/loading_animation" />

            <ImageView
                android:id="@+id/img_refresh"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_refresh"
                android:visibility="gone" />

        </FrameLayout>


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>